@@ -13,16 +13,16 @@
 /backward_compatibility/backward.ini|a554002e34eb83072d221087d58a173c
 /backward_compatibility/Context.php|20ea7992e2089fc6e90a37af409da9bb
 /backward_compatibility/index.php|eb18f895c85303c2ced77482ec4ab525
-/classes/models/LengowConfigurationForm.php|56239f5e6b79c802ec9bd527370f24f6
+/classes/models/LengowConfigurationForm.php|ef1c5fb6d91735ca7348d371bd629ba2
 /classes/models/LengowTool.php|52694113420e270308eb7b66c853896f
 /classes/models/LengowImportOrder.php|7810c00658d2f1de2e4d3c090c2d4d86
 /classes/models/LengowPaymentModule.php|d45945f62754580f18e27a65e7dc422d
 /classes/models/LengowMethod.php|79d866d30beba3ca349cd66b501d86d8
 /classes/models/LengowCustomer.php|9876528937cc0eb70737950a31a7d559
-/classes/models/LengowSync.php|0f5e4b96f326708a47cb0d7bb9191336
+/classes/models/LengowSync.php|bff1c2b69f059d1acf8f0e34328e3f77
 /classes/models/LengowCountry.php|9272660d9cb039e52ef2fd1bfca33caa
 /classes/models/LengowHook.php|b46c2bffdce1124e1c20c3676f2cfaa4
-/classes/models/LengowImport.php|86018894eae006f8184bba9b693d3b7c
+/classes/models/LengowImport.php|759b67a4647178bb2b66f80dc7149437
 /classes/models/LengowFeed.php|89111b71953bd422baf8dc39f4d90466
 /classes/models/LengowCheck.php|a1ef4482c94d869438de225373cefd65
 /classes/models/LengowBackup.php|b925fe77481a09e3b1cda3506d809bc0
@@ -43,14 +43,14 @@
 /classes/models/LengowTranslation.php|9b660d426e09a54cf0cdb5fd070825b6
 /classes/models/LengowFile.php|0db945b304aaef965e531dbc8da644d0
 /classes/models/LengowShop.php|66a729bfcc41720eb40a69e21c04d666
-/classes/models/LengowConnector.php|327fdd62c9ddf90d96b3f9fd900c1fea
+/classes/models/LengowConnector.php|850abbf1c3f4723fc02fca1fc5d09045
 /classes/models/LengowException.php|c25029800cbc155b26375415141e8824
 /classes/models/LengowCart.php|d9fbb497089ceb48d5e4b713f736452e
 /classes/models/LengowMarketplace.php|580bdfca2b42b4edb4d58d2117deac45
 /classes/models/LengowAddress.php|a382676c3e6fa40eaac0a9afcacd17e1
 /classes/models/index.php|ed8e273082cc0a58535dc2b454435f38
 /classes/models/LengowProduct.php|eebeb98789895d199207e38ae4e680c8
-/classes/models/LengowConfiguration.php|10aecfb03034439ebfb6cfe2fbb26d9e
+/classes/models/LengowConfiguration.php|89f8f89076645a9d8037007724edbd2b
 /classes/index.php|ed8e273082cc0a58535dc2b454435f38
 /classes/controllers/LengowController.php|22f041328b5dbd01ba03d29b70b48a76
 /classes/controllers/LengowHomeController.php|e613ab0dddecf52440768a813c814d54
@@ -483,6 +483,6 @@
 /views/js/lengow/order_setting.js|75dad32a303997927920b2a71aa6f98e
 /views/js/lengow/index.php|eb18f895c85303c2ced77482ec4ab525
 /views/index.php|eb18f895c85303c2ced77482ec4ab525
-/webservice/cron.php|5f585a2daf218d2a7d2bb2d0913caef8
+/webservice/cron.php|6312a62403d70b7a65b35ac8fb8646c0
 /webservice/index.php|eb18f895c85303c2ced77482ec4ab525
 /webservice/export.php|130d34b944d9105f3f217101b97fd565
